Change action bar icon back to menu, setting items included. All keyboard buttons aligned and equally stretched.
Former Settings page can also be found in the 'About' page, currently unavailable.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.freecalc_material3test">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,11 +17,12 @@
         tools:targetApi="31">
         <activity
             android:name=".SettingsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.FreeCalc_Material3Test"
+            android:label="Settings"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.FreeCalc_Material3Test">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
