--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.example.freecalc_material3test"
         minSdk 26
         targetSdk 32
-        versionCode 5
-        versionName "1.0.8-beta2"
+        versionCode 6
+        versionName "1.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
