--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId 'com.horacehyy.freecalc'
         minSdk 26
         targetSdk 32
-        versionCode 12
-        versionName "1.5.5"
+        versionCode 13
+        versionName "1.5.9"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -32,31 +32,18 @@ android {
     buildFeatures {
         viewBinding true
     }
-
-    configurations.all {
-        exclude group: 'androidx.appcompat', module: 'appcompat'
-    }
 }
 
 dependencies {
-    implementation("androidx.compose.material3:material3:1.0.0-alpha15")
-    implementation("androidx.compose.material3:material3-window-size-class:1.0.0-alpha15")
-    implementation("dev.rikka.rikkax.appcompat:appcompat:1.4.1")
-    implementation("dev.rikka.rikkax.core:core:1.4.1")
-    implementation("dev.rikka.rikkax.insets:insets:1.3.0")
-    implementation("dev.rikka.rikkax.material:material:2.5.1")
-    implementation("dev.rikka.rikkax.material:material-preference:2.0.0")
-    implementation("dev.rikka.rikkax.preference:simplemenu-preference:1.0.3")
-    implementation("dev.rikka.rikkax.recyclerview:recyclerview-ktx:1.3.1")
-    implementation("dev.rikka.rikkax.widget:borderview:1.1.0")
-    implementation("dev.rikka.rikkax.widget:mainswitchbar:1.0.2")
-    implementation("dev.rikka.rikkax.layoutinflater:layoutinflater:1.2.0")
+    implementation("androidx.compose.material3:material3:1.0.0-alpha16")
+    implementation("androidx.compose.material3:material3-window-size-class:1.0.0-alpha16")
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation("androidx.preference:preference:1.2.0")
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
     implementation 'com.google.android.material:material:1.7.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.6.0-alpha04'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
